--- a/Routing/partials/tipoComida.html
+++ b/Routing/partials/tipoComida.html
@@ -3,8 +3,8 @@
             <!-- <div class="header-search-wrapper grey hide-on-large-only">
                 <i class="mdi-action-search active"></i>
                 <input type="text" name="Search" class="header-search-input z-depth-2" placeholder="Explore Materialize">
-            </div>
-          -->          <div class="container">
+            </div>--> 
+        <div class="container">
           <div class="row">
             <div class="col s12 m12 l12">
               <h5 class="breadcrumbs-title">Tipos de Comida</h5>
